add ch8, updates in other chapters

--- a/chapter-7.ipynb
+++ b/chapter-7.ipynb
@@ -23,9 +23,9 @@
     "\n",
     "<img src=\"images/ch7-challenger.png\" width=\"400\">\n",
     "\n",
-    "The investigation found that many aspects of the NASA decision making process were flawed, and focused in particular on a meeting between NASA staff and engineers from Morton Thiokol, a contractor who built the solid rocket boosters. These engineers were particularly concerned because the temperatures were forecast to be very cold on the morning of the launch, and they had data from previous launches showing that performance of the O-rings was compromised at lower temperatures. In a meeting on the evening before the launch, the engineers presented their data to the NASA managers, but were unable to convince them to postpone the launch. Their evidence was a set of hand-written slides showing numbers from various past launches.\n",
+    "The investigation found that many aspects of the NASA decision making process were flawed, and focused in particular on a meeting between NASA staff and engineers from Morton Thiokol, a contractor who built the solid rocket boosters. These engineers were particularly concerned because the temperatures were forecast to be very cold on the morning of the launch, and they had data from previous launches showing that performance of the O-rings was compromised at lower temperatures. In a meeting on the evening before the launch, the engineers presented their data to the NASA managers, but were unable to convince them to postpone the launch. Their evidence was a set of hand-written slides describing outcomes from various past launches.\n",
     "\n",
-    "The visualization expert Edward Tufte has argued that with a proper presentation of all of the data, the engineers could have been much more persuasive. In particular, they could have shown a figure like the one below, which highlights two important facts. First, it shows that the amount of O-ring damage (defined by the amount of erosion and soot found outside the rings after the solid rocket boosters were retrieved from the ocean in previous flights) was closely related to the temperature at takeoff. Second, it shows that the range of forecasted temperatures for the morning of January 28 (shown in the red shaded area) was well outside of the range of all previous launches. While we can’t know for sure, it seems at least plausible that this could have been more persuasive.\n",
+    "The visualization expert Edward Tufte has argued that with a proper presentation of all of the data, the engineers could have been much more persuasive. In particular, they could have shown a figure like the one below, which highlights two important facts. First, it shows that the amount of O-ring damage was closely related to the temperature at takeoff. Second, it shows that the range of forecasted temperatures for the morning of January 28 (shown in the red shaded area) was well outside of the range of all previous launches. While we can’t know for sure, it seems at least plausible that this could have been more persuasive for why cold temperatures would mean likely O-ring failure.\n",
     "\n",
     "<img src=\"images/ch7-challengerdamage.png\" width=\"750\">"
    ]
@@ -51,7 +51,7 @@
     "\n",
     "In general we prefer using a plotting technique that provides a clearer view of the distribution of the data points. In panel C, we see one example of a **violin plot**, which plots the distribution of data in each condition (after smoothing it out a bit). Obviously, the name of this plot comes from the fact that it sort of resembles a violin shape. The fatter part of the \"violin\" is where there is more data, the skinnier parts are the tails of the distribution. You can make a plot like this in R using ```gf_violin()```. \n",
     "\n",
-    "Another option is the boxplot shown in panel D, which shows the median (central line), a measure of variability (the width of the box, which is based on a measure called the interquartile range), and any outliers (noted by the points at the ends of the lines). Violin plots and boxplots are both effective ways to communicate the central tendency of each group as well as provide a good feel for the distribution of the data.\n",
+    "Another option is the boxplot shown in panel D, which shows the median (central line), a measure of variability (the width of the box, which is based on the interquartile range), and any outliers (noted by the points at the ends of the lines). Violin plots and boxplots are both effective ways to communicate the central tendency of each group as well as provide a good feel for the distribution of the data.\n",
     "\n",
     "Let's explore the differences between making a boxplot and a violin plot. In the code window below, write a function that will plot ```Thumb``` explained by ```RaceEthnic``` from the ```fingers``` dataset, with colors varying by ```RaceEthnic```. "
    ]
@@ -63,10 +63,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "install.packages(\"readr\")\n",
+    "install.packages(\"ggformula\")\n",
     "library(readr)\n",
     "library(ggformula)\n",
     "\n",
-    "fingers <- read_csv('fingers.csv')"
+    "fingers <- read_csv(\"https://raw.githubusercontent.com/smburns47/Psyc158/main/fingers.csv\")"
    ]
   },
   {
@@ -148,7 +150,7 @@
    "source": [
     "That's for making the raw data most evident. You also want your broader message to stand out - again, think about *why* you're showing people this graph. Are they understanding what you want them to understand? In the plot above, even if you changed it to a jitter plot, changed the point transparency, etc., it might still be hard to see from a glance where the central tendency of each group is, or which group is which. People can probably figure it out by looking harder, but in the real world we want things to be as cognitively easy for our readers as possible. \n",
     "\n",
-    "Thus, it's good to choose plot styles and elements that highlight your main message. For this plot, we might be trying to say \"male students have generally longer middle fingers than female students.\" This has two important pieces to communicate - the central tendency of a group, and the distinctness of the groups. It's a good rule of thumb that, when you have more than one group of data in a plot, that you change the color of the data to correspond to each group. In addition, if the central tendency is the main summary statistic you care about, choose a plot type that highlights that (such as a violin plot or a boxplot). \n",
+    "Thus, it's good to choose plot styles and elements that highlight your main message. For this plot, we might be trying to say \"male students have generally longer middle fingers than female students.\" This has two important pieces to communicate - the central tendency of a group, and the distinctness of the groups. It's a good rule of thumb that, when you have more than one group of data in a plot, you change the color of the data to correspond to each group. In addition, if the central tendency is the main summary statistic you care about, choose a plot type that highlights that (such as a violin plot or a boxplot). \n",
     "\n",
     "Below is the same basic scatterplot. Try to switch it to a plot type that better communicates the central tendency, and change the group colors to be different. "
    ]
@@ -170,9 +172,7 @@
    "metadata": {},
    "source": [
     "### Rule 2 - Maximize the data to ink ratio\n",
-    "Edward Tufte has proposed an idea called the data/ink ratio:\n",
-    "\n",
-    "$$data/ink-ratio = \\frac{ink-used-on-data}{total-ink-used}$$\n",
+    "Edward Tufte has proposed an idea called the data/ink ratio, which is the amount of ink used on representing the data vs. the total amount of ink used for the whole plot.\n",
     "\n",
     "Because we now do all our statistics with code, \"ink\" is maybe an anachronism - it could be better to say \"pixels\" now. But regardless, the point of this is to minimize visual clutter and let the data show through. For example, take the two presentations of the dental health data below. Both panels show the same data, but panel A is much easier to apprehend, because of its relatively higher data/ink ratio.\n",
     "\n",
@@ -221,8 +221,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gf_point(Middle ~ Thumb, data=fingers) %>% \n",
-    "    gf_refine(coord_cartesian(ylim=c(0,140))) #the argument ylim takes a vector defining the min and max of the axis"
+    "gf_point(Middle ~ Thumb, data = fingers) %>% \n",
+    "    gf_refine(., coord_cartesian(ylim = c(0,140))) #the argument ylim takes a vector \n",
+    "                                                 #defining the min and max of the axis"
    ]
   },
   {
@@ -240,8 +241,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gf_point(Middle ~ Thumb, data=fingers) %>%\n",
-    "    gf_refine(coord_cartesian(ylim = c(0, 200), xlim = c(0,200))) "
+    "gf_point(Middle ~ Thumb, data = fingers) %>%\n",
+    "    gf_refine(., coord_cartesian(ylim = c(0, 200), xlim = c(0,200))) "
    ]
   },
   {
@@ -266,8 +267,7 @@
     "library(dplyr)\n",
     "\n",
     "filter(fingers, RaceEthnic %in% c(\"Asian\",\"White\")) %>%\n",
-    "    gf_bar( ~ RaceEthnic, data= .)      #piping the filtered data to an argument in gf_bar that is not first,\n",
-    "                                        #so need to use a \".\" to tell the pipe where to put it"
+    "    gf_bar( ~ RaceEthnic, data = .)      #piping the filtered data to the data argument"
    ]
   },
   {
@@ -288,8 +288,8 @@
    "outputs": [],
    "source": [
     "filter(fingers, RaceEthnic %in% c(\"Asian\",\"White\")) %>%\n",
-    "    gf_bar( ~ RaceEthnic, data= .) %>%\n",
-    "    gf_refine(coord_cartesian(ylim = c(48, 56)))\n"
+    "    gf_bar( ~ RaceEthnic, data = .) %>%\n",
+    "    gf_refine(., coord_cartesian(ylim = c(48, 56)))\n"
    ]
   },
   {
@@ -297,7 +297,7 @@
    "id": "e353dde3",
    "metadata": {},
    "source": [
-    "Of course, if we look at the y-axis values the actual difference in numbers doesn't change. But it's difficult to override our initial reaction to seeing differently-sized bars, so the first impression of this graph is \"there are many more Asian students than White.\" \n",
+    "Of course, if we look at the y-axis values the actual difference in numbers doesn't change. But it's difficult to override our initial reaction to seeing differently-sized bars, so the first impression of this graph is \"there are many more Asian students than White.\" You can imagine the types of commentary that can be spawned on social media just from a quick glance at a picture. \n",
     "\n",
     "To avoid wasting too much white space or misleading your audience by exaggerating differences, a good starting place is to use axis ranges that encompass the full range of your raw data but not much more. Then consider whether a larger range should be used based on what you're specifically trying to communicate."
    ]
@@ -319,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gf_jitter(MathAnxious ~ Interest, data=fingers, height=0.1, width=0.1)"
+    "gf_jitter(MathAnxious ~ Interest, data = fingers, height = 0.1, width = 0.1)"
    ]
   },
   {
@@ -327,7 +327,7 @@
    "id": "14255ac4",
    "metadata": {},
    "source": [
-    "In this graph, without knowing much about the study the data came from, can you be sure what \"Interest\" means? Even if you know this is a study of students in a statistics class, is it interest in the course? This less? Taking this survey? \n",
+    "In this graph, without knowing much about the study the data came from, can you be sure what \"Interest\" means? Even if you know this is a study of students in a statistics class, is it interest in the course? This lesson? Taking this survey? \n",
     "\n",
     "If you're writing a research paper with this data, someone could read the text elsewhere in your paper to know what the variable names mean, but why make them work so hard and risk them not understanding? It's important to label the axes in your plots with readable names that communicate important information about the variable by just looking at the image. \n",
     "\n",
@@ -343,7 +343,7 @@
    },
    "outputs": [],
    "source": [
-    "gf_jitter(MathAnxious ~ Interest, data=fingers, height=0.1, width=0.1, xlab = \"Interest in Statistics\")"
+    "gf_jitter(MathAnxious ~ Interest, data = fingers, height = 0.1, width = 0.1, xlab = \"Interest in Statistics\")"
    ]
   },
   {
@@ -363,7 +363,7 @@
    },
    "outputs": [],
    "source": [
-    "gf_jitter(MathAnxious ~ Interest, data=fingers, height=0.1, width=0.1, \n",
+    "gf_jitter(MathAnxious ~ Interest, data = fingers, height = 0.1, width = 0.1, \n",
     "          xlab = \"Interest in Statistics\", ylab = \"Math Anxiety\")"
    ]
   },
@@ -447,7 +447,7 @@
    "id": "b6ae1283",
    "metadata": {},
    "source": [
-    "The coloring function we applied to the histogram, ```scale_fill_manual()``` (or ```scale_color_manual()``` for outlines), isn't the only coloring function. The \"manual\" part of the name refers to the fact that you choose colors by their name (\"purple\" or \"orange\"), but it's restricted to just a few colors. There are a great many color packages that people have created to provide extra palettes to work with. Here are some gradients of example palettes:\n",
+    "The coloring function we applied to the histogram, ```scale_fill_manual()``` (or ```scale_color_manual()``` for outlines), isn't the only coloring function. The \"manual\" part of the name refers to the fact that you manually choose colors by their name (\"purple\" or \"orange\"), but it's restricted to just a few colors. There are a great many color packages that people have created to provide extra palettes to work with. Here are some gradients of example palettes:\n",
     "\n",
     "<img src=\"images/ch7-colors.png\" width=\"500\">\n",
     "\n",
@@ -461,7 +461,7 @@
     "\n",
     "- ```scale_color_viridis()```: Change the color of points, lines and texts\n",
     "- ```scale_fill_viridis()```: Change the fill color of areas (box plot, bar plot, etc)\n",
-    "- ```viridis(n)```, ```magma(n)```, ```inferno(n)``` and ```plasma(n)```: Generate color palettes for base plot, where n is the number of colors to return.\n",
+    "- ```viridis(n)```, ```magma(n)```, ```inferno(n)``` and ```plasma(n)```: Generate color palettes, where n is the number of colors to return.\n",
     "\n",
     "Let's add this package, and then use ```viridis(5)``` to pick out 5 color values:"
    ]
@@ -473,8 +473,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "install.packages(\"viridis\") #comment these commands out after the first time you use them so you \n",
-    "library(viridis)            #don't have to spend time re-installing after the first use\n",
+    "install.packages(\"viridis\") \n",
+    "library(viridis)            \n",
     "\n",
     "viridis(5)"
    ]
@@ -499,10 +499,10 @@
    "outputs": [],
    "source": [
     "gf_histogram(~ Thumb, data = fingers, fill = ~ Sex) %>%\n",
-    "    gf_refine(., scale_fill_viridis(discrete=TRUE))\n",
+    "    gf_refine(., scale_fill_viridis(discrete = TRUE))\n",
     "\n",
     "gf_point(Middle ~ Thumb, data = fingers, color = ~ Thumb, size = 3) %>%\n",
-    "    gf_refine(., scale_color_viridis(discrete=FALSE)) #FALSE is the default value, so not required to add it here"
+    "    gf_refine(., scale_color_viridis(discrete = FALSE)) #FALSE is the default value, so not required to add it here"
    ]
   },
   {
@@ -521,7 +521,7 @@
    "outputs": [],
    "source": [
     "gf_point(Middle ~ Thumb, data = fingers, color = ~ Thumb, size = 3) %>%\n",
-    "    gf_refine(., scale_color_viridis(discrete=FALSE, option=\"magma\"))"
+    "    gf_refine(., scale_color_viridis(discrete = FALSE, option = \"magma\"))"
    ]
   },
   {
@@ -542,9 +542,11 @@
     "colorpalette <- viridis(5, option = \"plasma\")\n",
     "print(colorpalette)\n",
     "\n",
+    "#using the 2nd and 4th generated colors\n",
     "gf_histogram(~ Thumb, data = fingers, fill = ~ Sex) %>%\n",
     "    gf_refine(., scale_fill_manual(values = c(color_choices[2], color_choices[4])))\n",
     "\n",
+    "#using the 3rd and 5th generated colors\n",
     "gf_histogram(~ Thumb, data = fingers, fill = ~ Sex) %>%\n",
     "    gf_refine(., scale_fill_manual(values = c(color_choices[3], color_choices[5])))"
    ]
