--- a/chapter-4.ipynb
+++ b/chapter-4.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "x1 <- c(1,2,3,4,5)\n",
     "x2 <- c(18,21,20,23,20)\n",
-    "data.frame(x1 = x1, x2 = x2)"
+    "data.frame(x1, x2)"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "id": "97f37a79",
    "metadata": {},
    "source": [
-    "This function takes as arguments all the vectors you want to combine, and lines them up together as columns in the order you typed them in. This way, you imply that the second item in ```x1``` and the second item in ```x2``` belong to the same observation, since they appear on the same row in the dataframe. This function also gives the variables names; let's rewrite the code above to give ```x1``` and ```x1``` more meaningful variable names."
+    "This function takes as arguments all the vectors you want to combine, and lines them up together as columns in the order you typed them in. This way, you imply that the second item in ```x1``` and the second item in ```x2``` belong to the same observation, since they appear on the same row in the dataframe. This function also gives the variables names based on what the vectors were named; let's rewrite the code above to give ```x1``` and ```x2``` more meaningful variable names."
    ]
   },
   {
@@ -77,7 +77,7 @@
    "source": [
     "x1 <- c(1,2,3,4,5)\n",
     "x2 <- c(18,21,20,23)\n",
-    "data.frame(x1 = x1, x2 = x2)"
+    "data.frame(user_id = x1, age = x2)"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "id": "22de7d3c",
    "metadata": {},
    "source": [
-    "If it lived on your own computer in within the working directory, it would be even simpler to write: ```read_csv(\"mindsetmatters.csv\").``` If the data lived in a different directory, for example in a folder called \"datasets\", you'd have to include the relative path to that file that in the filename for R to be able to find it. I.e., ```read_csv(\"datasets/mindsetmatters.csv\")```."
+    "If it lived on your own computer within the working directory, it would be even simpler to write: ```read_csv(\"mindsetmatters.csv\").``` If the data lived in a different directory, for example in a folder called \"datasets\", you'd have to include the relative path to that file that in the filename for R to be able to find it. I.e., ```read_csv(\"datasets/mindsetmatters.csv\")```."
    ]
   },
   {
@@ -399,10 +399,10 @@
     "\n",
     "Once data are in a tidy format, we can use R commands to manipulate the data in various ways. Let’s look at a few common things you might need to do before analyzing your data:\n",
     "\n",
-    "- Identifying Missing Data\n",
-    "- Filtering Data\n",
-    "- Creating New Variables\n",
-    "- Recoding Variables\n",
+    "- identifying missing data\n",
+    "- filtering data\n",
+    "- creating new variables\n",
+    "- recoding variables\n",
     "\n",
     "### Identifying missing data\n",
     "\n",
@@ -533,7 +533,7 @@
     "\n",
     "It is quite common to create new variables that mutate values from other variables. For example, in ```mindsetmatters```, we have a measurement for both someone's weight (```Wt```)  and their BMI score (```BMI```).   We don't know their height, but BMI is a function of weight / height. So, we could divide ```Wt``` by ```BMI``` to make a new variable ```Ht```. \n",
     "\n",
-    "Making a new variable is easy. Simply assign the computed vector to a new variable naming using the ```$``` symbol after the dataframe name. E.g., ```mindsetmatters$Ht <- mindsetmatters$Wt / mindsetmatters$BMI```. If the variable ```Ht``` already exists in the dataframe, R will overwrite it with these new values. If it doesn't, R will create a new variable and append it as a new column to the end of ```mindsetmatters```."
+    "Making a new variable is easy. Simply assign the computed vector to a new variable name using the ```$``` symbol after the dataframe name. E.g., ```mindsetmatters$Ht <- mindsetmatters$Wt / mindsetmatters$BMI```. If the variable ```Ht``` already exists in the dataframe, R will overwrite it with these new values. If it doesn't, R will create a new variable and append it as a new column to the end of ```mindsetmatters```."
    ]
   },
   {
@@ -712,16 +712,6 @@
     "- Recode a variable\n",
     "- Explain why we don't want to do destructive editing"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a202e144",
-   "metadata": {},
-   "source": [
-    "## Chapter quiz\n",
-    "\n",
-    "Questions from 2.7 coursekata"
-   ]
   }
  ],
  "metadata": {
@@ -736,7 +726,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.3"
+   "version": "4.1.2"
   }
  },
  "nbformat": 4,
