--- a/chapter-6.ipynb
+++ b/chapter-6.ipynb
@@ -49,6 +49,11 @@
    "source": [
     "install.packages(\"readr\")\n",
     "library(readr)\n",
+    "install.packages(\"dplyr\")\n",
+    "library(dplyr)\n",
+    "install.packages(\"ggformula\")\n",
+    "library(ggformula)\n",
+    "\n",
     "fingers <- read_csv(\"https://raw.githubusercontent.com/smburns47/Psyc158/main/fingers.csv\")"
    ]
   },
@@ -67,8 +72,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "install.packages(\"ggformula\")\n",
-    "library(ggformula)\n",
     "gf_histogram(~ Thumb, data = fingers)"
    ]
   },
