--- a/chapter-7.ipynb
+++ b/chapter-7.ipynb
@@ -264,6 +264,7 @@
    },
    "outputs": [],
    "source": [
+    "install.packages(\"dplyr\")\n",
     "library(dplyr)\n",
     "\n",
     "filter(fingers, RaceEthnic %in% c(\"Asian\",\"White\")) %>%\n",
@@ -544,11 +545,11 @@
     "\n",
     "#using the 2nd and 4th generated colors\n",
     "gf_histogram(~ Thumb, data = fingers, fill = ~ Sex) %>%\n",
-    "    gf_refine(., scale_fill_manual(values = c(color_choices[2], color_choices[4])))\n",
+    "    gf_refine(., scale_fill_manual(values = c(colorpalette[2], colorpalette[4])))\n",
     "\n",
     "#using the 3rd and 5th generated colors\n",
     "gf_histogram(~ Thumb, data = fingers, fill = ~ Sex) %>%\n",
-    "    gf_refine(., scale_fill_manual(values = c(color_choices[3], color_choices[5])))"
+    "    gf_refine(., scale_fill_manual(values = c(colorpalette[3], colorpalette[5])))"
    ]
   },
   {
@@ -639,7 +640,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.3"
+   "version": "4.1.2"
   }
  },
  "nbformat": 4,
