put ggformula installation at top of chapters to save time

--- a/chapter-6.ipynb
+++ b/chapter-6.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51a4ea77",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# This chapter uses some packages that take a few minutes to download on Google Colab. \n",
+    "# Run this first so it's ready by the time you need it\n",
+    "install.packages(\"readr\")\n",
+    "library(readr)\n",
+    "install.packages(\"dplyr\")\n",
+    "library(dplyr)\n",
+    "install.packages(\"ggformula\")\n",
+    "library(ggformula)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b5588766",
    "metadata": {},
@@ -44,16 +63,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "afb0a809",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "install.packages(\"readr\")\n",
-    "library(readr)\n",
-    "install.packages(\"dplyr\")\n",
-    "library(dplyr)\n",
-    "install.packages(\"ggformula\")\n",
-    "library(ggformula)\n",
-    "\n",
     "fingers <- read_csv(\"https://raw.githubusercontent.com/smburns47/Psyc158/main/fingers.csv\")"
    ]
   },
@@ -69,7 +83,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "66c38d4b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "gf_histogram(~ Thumb, data = fingers)"
@@ -104,7 +120,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4f85338e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "gf_histogram(~ Thumb, data = fingers, fill = ~ Sex)"
@@ -122,7 +140,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c4f98ae3",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# graphics plots can be saved as objects; when you do, they won't automatically print to the console\n",
@@ -144,7 +164,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "62515e68",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "gf_histogram(~ Thumb, data = fingers, fill = ~ Sex) %>%\n",
@@ -181,7 +203,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9fd7adc7",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "gf_histogram(~ Thumb, data = fingers) %>% \n",
@@ -227,7 +251,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d6b10120",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Modify this code to create density histograms\n",
@@ -255,7 +281,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5a96e5fc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Write your code here to plot histograms of thumb and another variable\n"
@@ -273,7 +301,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "58e54385",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "gf_histogram(~ Thumb, data = fingers) %>% \n",
@@ -326,13 +356,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c5cae24c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "install.packages(\"dplyr\")\n",
-    "library(dplyr)\n",
     "mindsetmatters <- read_csv(\"https://raw.githubusercontent.com/smburns47/Psyc158/main/mindsetmatters.csv\")\n",
     "mindsetmatters$WtLost <- (mindsetmatters$Wt - mindsetmatters$Wt2) < 0 \n",
+    "# using select() function loaded from dplyr\n",
     "head(select(mindsetmatters, Condition, WtLost))"
    ]
   },
@@ -352,7 +383,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "af03ef06",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "gf_bar(~ WtLost, data = mindsetmatters)"
@@ -370,7 +403,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bf7c9fe2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Create a bar graph of WtLost, then use gf_facet_grid() to compare the outcome across groups of Condition\n"
@@ -402,7 +437,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dac91c41",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "gf_point(Thumb ~ Sex, data = fingers)"
@@ -422,7 +459,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d6ec053c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "gf_point(Thumb ~ Sex, data = fingers, color = \"orange\", size = 5) \n"
@@ -440,7 +479,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f8eaf095",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "#Can you tell how many people have each explanatory/outcome pairing?\n",
@@ -459,7 +500,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "38fa07ce",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "gf_jitter(MathAnxious ~ Interest, data = fingers, color = \"blue\") "
@@ -477,7 +520,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "51904ae0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "gf_jitter(MathAnxious ~ Interest, data = fingers, color = \"blue\", width = 0.1, height = 0.1) "
@@ -517,7 +562,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1da39c02",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Play around with gf_jitter\n"
@@ -571,7 +618,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b1906a13",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "gf_point(Thumb ~ Height, data = fingers)"
@@ -605,7 +654,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7a27b6cd",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "gf_boxplot(Thumb ~ Sex, data = fingers)"
@@ -623,7 +674,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d35c3d6d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "gf_boxplot(Thumb ~ Sex, data = fingers, color = \"orange\")"
@@ -643,7 +696,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "92cb046d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "gf_boxplot(Thumb ~ Sex, data = fingers, color = \"orange\") %>%\n",
@@ -664,7 +719,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ef56557e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Modify this boxplot to look at Thumb length varying by Job instead of Sex\n",
@@ -719,25 +776,6 @@
     "- Explain what \"explain\" means\n",
     "- Change plots with faceting and colors\n",
     "- Make the correct type of plot for each type of quantitative/categorical variable display"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dd1c6328",
-   "metadata": {},
-   "source": [
-    "## Chapter quiz"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "539a0f87",
-   "metadata": {},
-   "source": [
-    "## Lab \n",
-    "\n",
-    "- Compare/contrast the qualities of different plots, why you'd use them\n",
-    "- Add a third variable by varying data size/color in a scatter plot"
    ]
   }
  ],
