--- a/chapter-8.ipynb
+++ b/chapter-8.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "## 8.3 Probability models\n",
     "\n",
-    "Other times, even if we aren't able to create a perfect model of a data generation process, we at least know all the outcomes that are possible under it. For example, when someone flips a coin, it is very hard to compute what face the coin will land on for this particular flip - that depends in some way on how forcefully and in what direction it was flicked with the thumb, but we're not sure of the exact relationship or if any other variables matter (like wind speed). However, we do know two things: 1) there are only two possible options (heads and tails), and 2) both options have an equal likelihood of happening. With these facts, even if we aren't able to *determine* what the outcome of one flip will be, we can pretty accurately say what the distribution of values are for *all possible* flips.\n",
+    "Other times, even if we aren't able to create a perfect model of a data generation process, we at least know all the outcomes that are possible under it. For example, when someone flips a coin, it is very hard to compute what face the coin will land on for this particular flip - that depends in some way on how forcefully and in what direction it was flicked with the thumb, but we're not sure of the exact relationship or if any other variables matter (like wind speed). However, we do know two things: 1) there are only two possible options (heads and tails), and 2) both options have an equal likelihood of happening. With these facts, even if we aren't able to *determine* what the outcome of *one* flip will be, we can pretty accurately say what the distribution of values are for *all possible* flips.\n",
     "\n",
     "Making a model of this process is called a **probability model**. The value of any one outcome variable is **random**, but the **population** (the distribution of all possible outcomes) is known. For the case of flipping a coin, we would write the equation for this model as: \n",
     "\n",
@@ -267,6 +267,8 @@
     "\n",
     "Before moving on, think programatically for a moment about each step your code would need to do to calculate this.\n",
     "\n",
+    "(Seriously, stop and try to find a solution before reading the next paragraph!)\n",
+    "\n",
     "One answer is that we can use a three-step process: 1) simulate two different samples of rolls (for two different dice), then 2) compute a new variable that checks whether there is a 6 in the ith roll of any sample, then lastly 3) make a distribution of that new variable. Here's the code for that process."
    ]
   },
@@ -453,7 +455,7 @@
     "\n",
     "Note that you can't specify a normal distribution with a min and a max - even if it doesn't look like it in the picture, technically all values are possible with a normal distribution. The sample space is {-∞ ≤ mean ≤ ∞}. \n",
     "\n",
-    "In R, we'll use ```rnorm()``` and ```dnorm()``` for doing the same sorts of commands we did previously with the uniform distribution. For instance, imagine that it takes you, generally, 8 minutes to bike to class from your dorm room. However, some days you're really fast, so it takes only 7 or even 6. Other days, your tire pressure is low or you're feeling sluggish - it takes longer. Let's generate a sample of travel times you might have, using a theoretical distribution of mean 8 and standard deviation 1:"
+    "In R, we'll use ```rnorm()``` and ```dnorm()``` for doing the same sorts of commands we did previously with the uniform distribution. For instance, imagine that it takes you, generally, 8 minutes to bike to class from your dorm room. However, any of a great many things could happen to you on the way there - you have to wait for traffic, or maybe your coffee suddenly kicks in. All these events combine to contribute to your overall travel time so that some days you're really fast, and other days it takes longer. Let's generate a sample of travel times you might have, using a theoretical distribution of mean 8 and standard deviation 1:"
    ]
   },
   {
