--- a/chapter-10.ipynb
+++ b/chapter-10.ipynb
@@ -40,9 +40,7 @@
     "\n",
     "In this chapter, we will dig deeper into the ERROR part of our DATA = MODEL + ERROR framework. In particular, we will develop methods for quantifying the total amount of error around a model. At the outset, it is worth remembering what the whole statistical enterprise is about: explaining variation. Once we have created a model, we can think about explaining variation in a new way, as reducing error around the model. \n",
     "\n",
-    "We have noted before that the mean is a better model of a quantitative outcome variable when the spread of the distribution is smaller than when it is larger. When the spread is smaller, the collection of residuals from the model are smaller. Quantifying the total error around a model will help us to know how good our models are, and which models are better than others.\n",
-    "\n",
-    "To make this concrete, let’s consider our very simple model of our tiny sample (n = 6) of data from last chapter, ```tiny_fingers```. Here is the data frame including the predictions and residuals from ```tiny_empty_model```.\n"
+    "We have noted before that the mean is a better model of a quantitative outcome variable when the spread of the distribution is smaller than when it is larger. When the spread is smaller, the collection of residuals from the model are smaller. Quantifying the total error around a model will help us to know how good our models are, and which models are better than others."
    ]
   },
   {
@@ -62,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thumb_model <-  #use lm() here with the variable \"Thumb\" in dataset \"fingers\"\n",
+    "thumb_model <-   #use lm() here with the variable \"Thumb\" in dataset \"fingers\"\n",
     "fingers$Thumb_residuals <-  #use resid() here on the generated model\n",
     "head(fingers)"
    ]
@@ -95,11 +93,9 @@
    "source": [
     "## 10.3 Central tendency of error \n",
     "\n",
-    "The first thing to note about an error distribution is where it is centered. When we base a statistical model on the mean of an outcome variable, like ```lm()``` always does, the mean of the residuals is always centered on zero. This highlights why the mean is a great starting place for building a model. It turns out that no number other than the mean will perfectly balance the deviations above the mean with those below the mean. Every value gets taken into account when calculating the mean. The mean is pulled in both directions (larger and smaller) at once and settles right in the middle. The mean is the number that balances the amount of deviation above and below it, yielding the same amount of error above it as below it. \n",
+    "The first thing to note about an error distribution is where it is centered. When we base a statistical model on the mean of an outcome variable, like ```lm()``` always does, the mean of the residuals is always centered on zero. This highlights why the mean is a great starting place for building a model. It turns out that no number other than the mean will perfectly balance the deviations above the mean with those below the mean. Every value gets taken into account when calculating the mean. The mean is pulled in both directions (larger and smaller) at once and settles right in the middle. The mean is the number that balances the amount of deviation above and below it, yielding the same amount of error above it as below it. As it turns out, in the absence of other information about the objects being studied, the mean of our sample is the best single estimate we have of what data from the population looks like. It is equally likely to be too high as it is too low, making it an *unbiased* estimator of the parameter.\n",
     "\n",
-    "As it turns out, in the absence of other information about the objects being studied, the mean of our sample is the best single estimate we have of what data from the population looks like. It is equally likely to be too high as it is too low, making it an *unbiased* estimator of the parameter.\n",
-    "\n",
-    "Because it is our best guess of what the population parameter is, it is the best predictor we have of the value of a subsequent observation. While it will certainly be wrong, the mean will do a better job than any other individual number.\n",
+    "Because it is our best guess of what the population parameter is, it is the best predictor we have of the value of a subsequent observation. While it will almost certainly be wrong, the mean will do a better job than any other individual number.\n",
     "\n",
     "If we were to pick a different number than the mean to use as the model, our residuals would no longer center on zero and on average we would make worse predictions. Check it out below:"
    ]
@@ -179,9 +175,9 @@
    "source": [
     "The sum of all error in this model is actually 0 (or a number so tiny it's practically zero and is just a rounding error in the computer).\n",
     "\n",
-    "Although we might at first think that the sum of the residuals would be a good indicator of total error, we've discovered a fatal flaw in that approach: the sum of the residuals around the mean is equal to 0! If this were our measure of total error, all data sets would be equally well modeled by the mean, because the residuals around the mean would always sum to 0. Thus a data set widely spread out around the mean, and one tightly clustered around the mean, would have the same amount of error around this simple model. Clearly we need a different approach.\n",
+    "Although we might at first think that the sum of the residuals would be a good indicator of total error, we've discovered a fatal flaw in that approach: the sum of the residuals around the mean is equal to 0! If this were our measure of total error, all data sets would be equally well modeled by the mean, because the residuals around the mean would always sum to 0. A data set widely spread out around the mean, and one tightly clustered around the mean, would have the same amount of error around this simple model. Clearly we need a different approach.\n",
     "\n",
-    "We can return back to the measures of spread in a distribution that we learned in chapter 5 and apply them to describing total error in a statistical model. Because several of those measures involve talking about spread as deviations away from the middle of a distribution, we can also use them to talk about deviations in a model based on the mean. "
+    "We can return back to the measures of spread in a distribution that we learned in chapter 5 and apply them to describing total error in a statistical model. Because several of those measures involve talking about spread as deviations away from the middle of a distribution, we can also use them to talk about deviations in a model based on the mean (i.e., spread in an error distribution). "
    ]
   },
   {
@@ -204,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sum(fingers$Thumb_residuals^2)"
+    "sum(fingers$Thumb_residuals**2)"
    ]
   },
   {
@@ -230,6 +226,8 @@
    "source": [
     "install.packages(\"supernova\")\n",
     "library(supernova)\n",
+    "\n",
+    "thumb_model <- lm(Thumb ~ NULL, data = fingers)\n",
     "\n",
     "supernova(thumb_model)"
    ]
@@ -268,7 +266,7 @@
     "Because it is an average, MSE is not impacted by sample size, and thus, can be used to compare the amount of error across two samples of different sizes.\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Note</b>: Note that we're not actually dividing by the total sample size, but N - 1. As we mentioned in chapter 5, there are some complex reasons for this that we'll get to at the end of the course. \n",
+    "<b>Note</b>: Note that we're not actually dividing by the total sample size, but N - 1. As we mentioned in chapter 5, there are some complex reasons for this that we'll get to later in the course. \n",
     "</div>\n",
     "\n",
     "And how do we calculate MSE in R? You know this one already! We can use ```var()``` on the residuals variable."
@@ -495,7 +493,7 @@
     "\n",
     "$$ Z_i = \\frac{(Y_i - \\bar{Y})}{s} $$\n",
     "\n",
-    "So you can implement this equation in R (watch out for order of operations!), or you can also use the function ```scale()```.\n",
+    "where *s* is the standard deviation of Y. You can implement this equation in R (watch out for order of operations!), or you can also use the function ```scale()```.\n",
     "\n",
     "The “z” in “z-score” comes from the fact that the standard normal distribution (a normal distribution with a mean of zero and a standard deviation of 1) used to be called the “Z” distribution. So, what this transformation does is it actually morphs our data into being a sample from a normal distribution. It also forces the newly-transformed scores to exactly match what the residuals would be if we fit a linear model to the transformed scores:"
    ]
