--- a/chapter-11.ipynb
+++ b/chapter-11.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2ea49ee3",
+   "id": "69edf8d5",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "075af6a7",
+   "id": "89f77a97",
    "metadata": {},
    "source": [
     "## 11.2 Adding an explanatory variable to the model\n",
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cb8f3b64",
+   "id": "9f615590",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c53f08a",
+   "id": "9bfd0b29",
    "metadata": {},
    "source": [
     "We can put this data into a basic scatter plot with ```Sex``` on the x-axis and ```Thumb``` on the y-axis in order to visualize how ```Sex``` might explain ```Thumb```. \n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77e84e74",
+   "id": "00212476",
    "metadata": {},
    "source": [
     "## 11.3 Specifying the model form\n",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d937d200",
+   "id": "62861fb0",
    "metadata": {},
    "source": [
     "## 11.4 Fitting the one-variable model\n",
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f1a5c906",
+   "id": "f93c8cb2",
    "metadata": {
     "scrolled": true
    },
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35a56f54",
+   "id": "0f195954",
    "metadata": {},
    "source": [
     "Notice that the estimates are exactly what you should have expected: the first estimate, for b<sub>0</sub>, is 59 (the mean for females); the second, b<sub>1</sub>, is 6, which is the number of millimeters you need to add to the female average thumb length to get average male thumb length.\n",
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59795f62",
+   "id": "5856704d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "782ad55c",
+   "id": "310e654f",
    "metadata": {},
    "source": [
     "Now that we have estimates for the two parameters, we can put them in our model statement to yield: Y<sub>i</sub> = 59 = 6X<sub>i</sub>.\n",
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6ba32228",
+   "id": "6c439e49",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7735abf8",
+   "id": "18a3488e",
    "metadata": {},
    "source": [
     "## 11.5 Generating predictions from the model\n",
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d246d6c6",
+   "id": "7f89be1d",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b91ca8d6",
+   "id": "95a686e0",
    "metadata": {},
    "source": [
     "You can use the ```$``` operator here even though ```sex_model``` isn't a data frame because it works with multiple types of complex objects. In a data frame, it accesses a column by name. In a model object, it accesses outputs of the model by name. The ```coefficients``` output has two items in it, so you can use indexing like ```[1]``` or ```[2]``` to access the first or the second coefficient. \n",
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "56fc932c",
+   "id": "bcc6c86a",
    "metadata": {
     "scrolled": true
    },
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7efea993",
+   "id": "78c474d7",
    "metadata": {},
    "source": [
     "This is a big output, but the results are just what we've already done - for each observation, their predicted thumb length is the mean of female students if their value on ```Sex``` is ```female``` (58.256), or will be the mean of male students if their value on ```Sex``` is ```male``` (64.703).\n",
@@ -901,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "650c8577",
+   "id": "256a76c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9e04fb5",
+   "id": "aa244941",
    "metadata": {},
    "source": [
     "## 11.6 Quantifying model fit\n",
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77340d9c",
+   "id": "c3ba01df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,18 +945,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc9a0682",
+   "id": "cb188b81",
    "metadata": {},
    "source": [
     "Success! If we make predictions about people's thumb lengths using the Grand Mean, on average we're about 4.05mm off. But if we take into account each person's sex for making the prediction, we're only about 2.65mm off. Not perfect, but we almost halved our error! \n",
     "\n",
     "You may have noticed that, in order to calculate RMSE for the empty and one-variable models above, we used slightly different equations. Specifically, in the null model it was calculated as: \n",
     "\n",
-    "$$RMSE_{null} = \\sqrt{\\frac{1}{N-1}\\sum_{i=1}^{N}(Y_i-\\hat{Y}_i)^2}$$\n",
+    "$$RMSE_{null} = \\sqrt{\\frac{1}{N-1}\\sum_{i=1}^{N}(Y_i-\\hat{Y}_{i-empty})^2}$$\n",
     "\n",
     "and in the one-variable model it was calculated as:\n",
     "\n",
-    "$$RMSE_{sex} = \\sqrt{\\frac{1}{N-2}\\sum_{i=1}^{N}(Y_i-\\hat{Y}_i)^2}$$\n",
+    "$$RMSE_{sex} = \\sqrt{\\frac{1}{N-2}\\sum_{i=1}^{N}(Y_i-\\hat{Y}_{i-sex})^2}$$\n",
     "\n",
     "The difference is that we divided the sum of squares in the null model by N - 1, and in the one-variable model we divided by N - 2. We've already talked about how, if this measure should be the root *mean* squared error, it's weird that we're not actually *calculating the mean of the error* (which would be found by dividing by N only). Now, we can learn more about why that is. \n",
     "\n",
@@ -978,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "68cd6b23",
+   "id": "b3053ad2",
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4445e1cf",
+   "id": "865de96d",
    "metadata": {},
    "source": [
     "How do the two ANOVA tables compare? It looks like the table for ```sex_model``` has the same information from the empty model, but with a lot of new numbers added also. Let's break this down. \n",
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "851f24a0",
+   "id": "000ef275",
    "metadata": {},
    "source": [
     "## 11.8 Improvement over empty model\n",
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd14ecfe",
+   "id": "0d338165",
    "metadata": {},
    "source": [
     "## Chapter summary\n",
@@ -1108,6 +1108,7 @@
     "- Explain what b<sub>0</sub> and b<sub>1</sub> mean in a one-variable model\n",
     "- Write the equation form of the one-variable statistical equation\n",
     "- Fit a one-variable model in R with lm()\n",
+    "- Expl\n",
     "- Identify the various error components in an ANOVA table of the one-variable model\n",
     "- Define what proportional reduction in error means \n",
     "- Calculate proportional reduction in error from SS"
