ch9 package dependency

--- a/chapter-11.ipynb
+++ b/chapter-11.ipynb
@@ -204,7 +204,7 @@
    "source": [
     "Now that we have estimates for the two parameters, we can put them in our model statement to yield: Y<sub>i</sub> = 59 = 6X<sub>i</sub>.\n",
     "\n",
-    "You may have noticed that the values of ```Sex``` in ```tiny_fingers``` are the categorical strings ```female``` or ```male```, and not 1 or 0. We were able to run ```lm()``` anyway, so it seems like R is able to handle converting categorical data to Boolean data. But how does R know which level of ```Sex``` should be 0 and which should be 1? The answer to this question is, R doesn’t know; it’s just taking whatever group comes first alphabetically (in this case,  ```female```) and making it the **reference group**. The mean of the reference group is the first parameter estimate (b<sub>0</sub> or the Intercept in the ```lm()``` output). R then takes the second group (in this case, ```male```) and represents it with b<sub>1</sub>.  \n",
+    "You may have noticed that the values of ```Sex``` in ```tiny_fingers``` are the categorical strings ```female``` or ```male```, and not 1 or 0. We were able to run ```lm()``` anyway, so it seems like R is able to handle converting categorical data to Boolean data. But how does R know which level of ```Sex``` should be 0 and which should be 1? The answer to this question is, R doesn’t really know. If ```Sex``` is character data, it’s just taking whatever group comes first alphabetically (in this case,  ```female```) and making it the **reference group**. If ```Sex``` is a factor variable, the reference group is whichever level of the variable was specified to be the first one (by appearing first in the vector passed to ```levels = ``` in the ```factor()``` function). The mean of the reference group is the first parameter estimate (b<sub>0</sub> or the Intercept in the ```lm()``` output). R then takes the second group (in this case, ```male```) and represents it with b<sub>1</sub>.  \n",
     "\n",
     "Let’s say, just for fun, that you changed the code for ```female``` into ```woman``` in the data frame. Because ```male``` now comes first in the alphabet, ```male``` becomes the reference group, and its mean is now the estimate for the intercept (b<sub>0</sub>).\n",
     "\n",
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e541b08",
+   "id": "fb329115",
    "metadata": {},
    "source": [
     "## 11.9 A historical note - the t-test\n",
