--- a/chapter-11.ipynb
+++ b/chapter-11.ipynb
@@ -110,7 +110,7 @@
    "source": [
     "## 11.3 Specifying the model form\n",
     "\n",
-    "Whereas the empty model was a one-parameter model (we only had to estimate one parameter, the Grand Mean), the ```Sex```  model is a two-parameter model. One of the parameters is the mean for males, the other is the mean for females. By using the model as an equation for predicting the value of ```Thumb```, we should be able to use one or the other mean depending on the value of ```Sex```. \n",
+    "Whereas the empty model was a one-parameter model (we only had to estimate one parameter, the Grand Mean), the ```Sex```  model is a two-parameter model. One of the parameters helps us find the mean for males, the other helps us find the mean for females. By using the model as an equation for predicting the value of ```Thumb```, we should be able to use one or the other mean depending on the value of ```Sex```. \n",
     "\n",
     "One way to do this is to use the mean of one group (say, females) as &beta;<sub>0</sub>, and then add an extra amount to that value if someone is actually male. In other words, we could specify another parameter, &beta;<sub>1</sub>, as the *difference* between male and female mean thumb lengths. But this should only be added if someone is male, so let's multiply this parameter by 1 if ```Sex``` is \"male\", and by 0 if ```Sex``` if \"female\" and we should ignore this addition.\n",
     "\n",
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb329115",
+   "id": "b77a7fa9",
    "metadata": {},
    "source": [
     "## 11.9 A historical note - the t-test\n",
